--- a/html/orderonline.html
+++ b/html/orderonline.html
@@ -12,33 +12,51 @@
 </head>
 
 <body>
-   <div class="container">
-            <div class="row">
-                <a href="index.html">
-                <div class="col-sm-4 logo"></div>
-                </a>
-                <div class="col-sm-8" title>
-                    <div class="row bg-color-title">
-                    <h1 class="title">CHICKITO INDIAN RESTAURANT</h1>
-                    </div>
-                    </div>
-                </div>
+   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="../indiass/index.css" type="text/css" />
+    <title>Indian Restaurant</title>
+</head>
+
+<body>
+
+    <header class="outer">
+        <div class="row">
+            <a href="index.html">
+                <div class="col-xs-4 picture">
+                <img src="../images/logo.png" class="img-circle media-object" height="300" width="300">
             </div>
-          
-              
-          </header> 
-                <div class="col-sm-10 col-md-offset-2">
-                    <div class="navbar-header">
-                        <ul class= "nav navbar-nav navback">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="reservation.html">Reservation</a></li>
-                            <li><a href="menu.html">Menu</a></li>
-                            <li><a href="wine.html">Wine</a></li> 
-                            <li class="active"><a href="orderonline.html">Order Online</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>  
-                        </ul>    
-   
-  
+            </a>
+            <header class="col-xs-8" title>
+                <div class="row">
+                    </div>
+                    <header class="heading">
+                        <div class="row bg-color-title">
+                            <h1 class="title">CHICKITO CUISINE</h1>
+                        </div>
+                    </header>
+
+                    <header class="col-xs-10">
+
+                        <nav class="navbar-header">
+                            <ul class="nav navbar-nav navback">
+                                <li><a href="index.html"><span class="glyphicon glyphicon-home"></span>Home</a></li>
+                                <li><a href="reservation.html"><span class="glyphicon glyphicon-calendar"></span>Reservation</a></li>
+                                <li><a href="menu.html"><span class="glyphicon glyphicon-open"></span>Menu</a></li>
+                                <li><a href="wine.html"><span class="glyphicon glyphicon-glass"></span>Wine</a></li>
+                                <li class="active"><a href="orderonline.html"><span class="glyphicon glyphicon-globe"></span>Order Online</a></li>
+                                <li><a href="contact.html"><span class="glyphicon glyphicon-phone-alt"></span>Contact Us</a></li>
+                            </ul>
+                        </nav>
+                </header>
+
+            </header>
+            </header>
      <section>
                 <div class="row">
  
